WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75527
Fix assert when foster parenting self-closing elements
https://bugs.webkit.org/show_bug.cgi?id=75527
Summary
Fix assert when foster parenting self-closing elements
Adam Barth
Reported
2012-01-03 22:44:16 PST
Fix assert when foster parenting self-closing elements
Attachments
Patch
(2.45 KB, patch)
2012-01-03 22:47 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-01-03 22:47:12 PST
Created
attachment 121071
[details]
Patch
Adam Barth
Comment 2
2012-01-03 22:47:53 PST
Comment on
attachment 121071
[details]
Patch This is causing a bunch of tests to assert on the bots at the moment.
WebKit Review Bot
Comment 3
2012-01-03 23:04:04 PST
Comment on
attachment 121071
[details]
Patch Clearing flags on attachment: 121071 Committed
r104014
: <
http://trac.webkit.org/changeset/104014
>
WebKit Review Bot
Comment 4
2012-01-03 23:04:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug