Fix assert when foster parenting self-closing elements https://bugs.webkit.org/show_bug.cgi?id=75527

Unreviewed.

Source/WebCore:


* html/parser/HTMLConstructionSite.cpp:
(WebCore::HTMLConstructionSite::fosterParent):
    - We can't execute this task immediately because the code for
      self-closing elements wants to set the self-closing flag.
      Instead, we queue the task.

LayoutTests:

Add a test case that used to case an assert.


* html5lib/resources/webkit02.dat:


Canonical link: https://commits.webkit.org/92301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104014 268f45cc-cd09-0410-ab3c-d52691b4dbfc